<resources>
    <string name="app_name">ParkX</string>
    <string name="summary">Summary</string>
    <string name="registration">Registration Form</string>
    <string name="mail">Mail Id</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date is:</string>
    <string name="policy">Agree? Privacy Policy?</string>
    <string name="register">Register</string>
    <string name="team_name">BINARY</string>
    <string name="about_us">About US</string>
    <string name="poll">Poll</string>
    <string name="vote_count">Vote Count:</string>
    <string name="winner">Winner:</string>
    <string name="holdme">Hold Me</string>
    <string name="exit">Exit</string>
    <string name="setDate">Set Remainder</string>
    <string name="loading">Loading...</string>
    <string name="selectDate">Select Date</string>
    <string name="RFID_Button">Go to Vehicle Slots</string>
    <string name="go_to_bill">Go to Billing</string>

</resources>